--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+ustreamlit
 requests
 fastapi
 uvicorn
@@ -7,9 +7,8 @@ openai
 plotly
 websockets
 transformers
-json
 pipeline
 random
 threading
-time
+pip
 queue
